<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.springframework.data.example</groupId>
	<artifactId>spring-data-example</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>Spring Data - Example</name>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.3.0.RELEASE</version>
	</parent>

	<modules>
		<module>jdbc</module>
		<module>jpa</module>
	</modules>

	<properties>
		<apt.version>1.1.3</apt.version>
		<jvm.enable-preview></jvm.enable-preview>
	</properties>

	<profiles>
		<profile>
			<id>spring-data-next-releasetrain</id>
			<properties>
				<spring-data-releasetrain.version>Neumann-BUILD-SNAPSHOT</spring-data-releasetrain.version>
			</properties>
		</profile>
		<profile>
			<id>spring-data-next</id>
			<properties>
				<spring-data-releasetrain.version>Neumann-BUILD-SNAPSHOT</spring-data-releasetrain.version>
			</properties>
		</profile>
<!--		<profile>-->
<!--			<id>java8</id>-->
<!--			<activation>-->
<!--				<jdk>1.8</jdk>-->
<!--			</activation>-->
<!--			<modules>-->
<!--				&lt;!&ndash; Embedded Cassandra (cassandra-all) is not compatible with Java runtime  and higher.-->
<!--				See https://issues.apache.org/jira/browser/CASSANDRA-9608 &ndash;&gt;-->
<!--				<module>cassandra</module>-->
<!--			</modules>-->
<!--		</profile>-->
		<profile>
			<id>java11</id>
			<activation>
				<jdk>11</jdk>
			</activation>
		</profile>
		<profile>
			<id>java-next</id>
			<activation>
				<jdk>[9,)</jdk>
			</activation>
			<dependencies>
				<dependency>
					<groupId>javax.xml.bind</groupId>
					<artifactId>jaxb-api</artifactId>
				</dependency>
				<dependency>
					<groupId>javax.annotation</groupId>
					<artifactId>javax.annotation-api</artifactId>
				</dependency>
			</dependencies>
		</profile>
		<profile>
			<id>java-13+</id>
			<activation>
				<jdk>[13,)</jdk>
			</activation>
			<properties>
				<jvm.enable-preview>--enable-preview</jvm.enable-preview>
			</properties>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-compiler-plugin</artifactId>
						<configuration>
							<release>13</release>
							<compilerArgs>${jvm.enable-preview}</compilerArgs>
						</configuration>
					</plugin>
					<plugin>
						<artifactId>maven-surefire-plugin</artifactId>
						<configuration>
							<argLine>${jvm.enable-preview}</argLine>
						</configuration>
					</plugin>
					<plugin>
						<artifactId>maven-failsafe-plugin</artifactId>
						<configuration>
							<argLine>${jvm.enable-preview}</argLine>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>java-13</id>
			<activation>
				<jdk>13</jdk>
			</activation>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-compiler-plugin</artifactId>
						<configuration>
							<release>13</release>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>java-14</id>
			<activation>
				<jdk>14</jdk>
			</activation>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-compiler-plugin</artifactId>
						<configuration>
							<release>14</release>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>java-15</id>
			<activation>
				<jdk>15</jdk>
			</activation>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-compiler-plugin</artifactId>
						<configuration>
							<release>15</release>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<dependencies>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
<!--		<dependency>-->
<!--			<groupId>junit</groupId>-->
<!--			<artifactId>junit-dep</artifactId>-->
<!--			<scope>test</scope>-->
<!--		</dependency>-->
	</dependencies>
<!--	<repositories>-->
<!--		<repository>-->
<!--			<id>spring-libs-snapshot</id>-->
<!--			<url>https://repo.spring.io/libs-snapshot</url>-->
<!--		</repository>-->
<!--	</repositories>-->

	<pluginRepositories>
		<pluginRepository>
			<id>spring-libs-snapshot</id>
			<url>https://repo.spring.io/libs-snapshot</url>
		</pluginRepository>
	</pluginRepositories>
</project>
